Рефакторинг. Добавил команды CRUD для посылок. Добавил воможность передавать размеры кузова для погрузки. Изменил погрузку посылок по названиям. Добавил разгрузку с подсчетом.