@@ -1,11 +1,15 @@
 package ru.calmsen.loadingparcels.service.loadingalgorithm;
 
 import lombok.extern.slf4j.Slf4j;
-import ru.calmsen.loadingparcels.model.domain.Box;
+import ru.calmsen.loadingparcels.exception.BusinessException;
+import ru.calmsen.loadingparcels.model.domain.Parcel;
 import ru.calmsen.loadingparcels.model.domain.Truck;
 import ru.calmsen.loadingparcels.model.domain.enums.LoadingMode;
 
-import java.util.*;
+import java.util.Comparator;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 /**
@@ -20,46 +24,44 @@ public class UniformLoadingAlgorithm implements LoadingAlgorithm {
         return this.mode;
     }
 
+    /**
+     * Погружает посылки в машины.
+     *
+     * @param parcels список посылок
+     * @param trucks  список машин
+     */
     @Override
-    public List<Truck> loadBoxes(List<Box> boxes, int truckWidth, int truckHeight, int trucksCount) {
-        if (boxes == null || boxes.isEmpty()) {
-            return new ArrayList<>();
+    public void loadParcels(List<Parcel> parcels, List<Truck> trucks) {
+        if (parcels == null || parcels.isEmpty() || trucks == null || trucks.isEmpty()) {
+            return;
         }
 
-        TruckLoaderHelper.checkMinTrucksCountBeforeLoad(boxes, truckWidth, truckHeight, trucksCount);
+        TruckLoaderHelper.checkMinTrucksCountBeforeLoad(parcels, trucks);
 
-        List<Truck> trucks = new ArrayList<>();
         Map<Truck, boolean[][]> filledPlaces = new HashMap<>();
-        for (int i = 0; i < trucksCount; i++) {
-            trucks.add(new Truck(truckWidth, truckHeight));
-            filledPlaces.put(trucks.get(i), new boolean[truckWidth][truckHeight]);
+        for (Truck truck : trucks) {
+            filledPlaces.put(truck, new boolean[truck.getHeight()][truck.getWidth()]);
         }
 
-        // отсортируем коробки по размерности
-        boxes = boxes.stream().sorted(Comparator.comparingInt(Box::getDimensions).reversed()).collect(Collectors.toList());
-        for (Box box : boxes) {
-            // отсортируем машины по заполненности
-            var sortedTrucks = trucks.stream().sorted(Comparator.comparingInt(x -> countFilledPlaces(x, filledPlaces))).toList();
-            for (Truck currentTruck : sortedTrucks) {
-                if (TruckLoaderHelper.canLoadBox(box, currentTruck, filledPlaces.get(currentTruck))) {
-                    TruckLoaderHelper.loadBox(box, currentTruck, filledPlaces.get(currentTruck));
+        // отсортируем коробки по размерности от большего к меньшему
+        parcels = parcels.stream().sorted(Comparator.comparingInt(Parcel::getDimensions).reversed()).collect(Collectors.toList());
+        for (Parcel parcel : parcels) {
+            var parcelLoaded = false;
+
+            // отсортируем машины по заполненности от меньшего к большему
+            for (Truck currentTruck : trucks.stream().sorted(Comparator.comparingInt(Truck::getFilledPlaces)).toList()) {
+                if (TruckLoaderHelper.canLoadParcel(parcel, currentTruck, filledPlaces.get(currentTruck))) {
+                    TruckLoaderHelper.loadParcel(parcel, currentTruck, filledPlaces.get(currentTruck));
+                    parcelLoaded = true;
                     break;
                 }
             }
-        }
 
-        TruckLoaderHelper.checkMinTrucksCountAfterLoad(trucksCount, trucks);
-        return trucks;
-    }
-
-
-    public int countFilledPlaces(Truck truck, Map<Truck, boolean[][]> filledPlaces) {
-        int count = 0;
-        for (int i = 0; i < filledPlaces.get(truck).length; i++) {
-            for (int j = 0; j < filledPlaces.get(truck)[i].length; j++) {
-                count += filledPlaces.get(truck)[i][j] ? 1 : 0;
+            if (!parcelLoaded) {
+                throw new BusinessException("Ни в какую машину не удалось погрузить посылку \n" + parcel);
             }
         }
-        return count;
+
+        TruckLoaderHelper.checkMinTrucksCountAfterLoad(parcels, trucks);
     }
 }
